--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         />
         <meta property="og:site_name" content="SNAP" />
         <meta property="og:type" content="website" />
-        <!-- Load the stylesheet-->
-        <link rel="stylesheet" href="./index.css" />
+        <!-- stylesheets-->
+        <link rel="stylesheet" href="index.css" />
     </head>
 
     <body class="homepage">
