--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     <body class="homepage">
         <header>
             <nav>
-                <div class="logotext">
                     <a href=""
                         ><img
                             fetchpriority="high"
@@ -44,15 +43,13 @@
                             class="logo"
                         />
                     </a>
-                    <h1>Service Numérique d'Accompagnement Pédagogique</h1>
-                </div>
-                <ul class="menu">
-                    <li><a href="#Accueil" class="page-scroll">Accueil</a></li>
-                    <li><a href="#équipe" class="page-scroll">L'équipe</a></li>
-                    <li><a href="#contact" class="page-scroll">Contact</a></li>
+                    <a href="#mission" class="page-scroll">Notre mission</a>
+                    <a href="#équipe" class="page-scroll">Notre équipe</a>
+                    <a href="#contact" class="page-scroll">Contact</a>
                 </ul>
             </nav>
         </header>
+        <!--
         <section id="intro">
             <div class="intro">
                 <img
@@ -202,5 +199,6 @@
         </section>
         <section id="contact"></section>
         <footer></footer>
+        <-->
     </body>
 </html>
