header + responsive : DONE

--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
     <body class="homepage">
         <header>
             <nav>
-                    <a href=""
+                    <a class="logoA"
+                    href=""
                         ><img
                             fetchpriority="high"
                             src="./ressources/LogoS.webp"
                             class="logo"
                         />
                     </a>
+                    <div class="txtWrapper">
                     <a href="#mission" class="page-scroll">Notre mission</a>
                     <a href="#équipe" class="page-scroll">Notre équipe</a>
                     <a href="#contact" class="page-scroll">Contact</a>
-                </ul>
+                    <div>
             </nav>
         </header>
         <!--
