--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </head>
 
     <body class="homepage">
-        <header>
+
+        <!--Header/Nav<--->
+        <header id="mission">
             <nav>
                     <a class="logoA"
                     href=""
@@ -51,18 +53,21 @@
                     <div>
             </nav>
         </header>
-        <!--
+
+        <!--Intro section<--->
         <section id="intro">
             <div class="intro">
+                <div class="over">
                 <img
                     fetchpriority="high"
                     src="./ressources/LogoL.webp"
                     class="logo"
                     alt="Logo du Service Numérique d'Accompagnement Pédagogique"
                 />
+                <h1>Service Numérique d'Accompagnement Pédagogique</h1>
+                </div>
                 <div class="under">
-                    <p class="firstP">
-                        Les missions de notre service s’articulent autour de
+                    <p>                        Les missions de notre service s’articulent autour de
                         deux composantes :
                     </p>
                     <div class="introInline">
@@ -84,9 +89,9 @@
                             class="iconIntro"
                             alt="Conception de. ressources"
                         />
-                        <p><strong>La conception de. ressources</strong></p>
+                        <p><strong>La conception de ressources</strong></p>
                     </div>
-                    <p>
+                    <p class="lastP">
                         Nous proposons notre appui aux enseignants afin
                         <strong>d'identifier leurs besoins</strong>, de leur
                         <strong
@@ -103,7 +108,21 @@
                     </p>
                 </div>
             </div>
+            <div class="actu">
+                <h1>Actualités</h1>
+                <iframe src="https://www.unimes.fr/fr/index.html"
+                    frameborder="0" border="0" cellspacing="0"
+                title="Site de l'Université de Nîmes"
+style="border-style: none;width: 100%; height: 100%;"
+
+                ></iframe>
+            </div>
+
+
         </section>
+
+        <!--
+
 
         <section id="équipe">
             <div class="team">
