--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <body class="homepage">
 
         <!--Header/Nav<--->
-        <header id="mission">
+        <header>
             <nav>
                     <a class="logoA"
                     href=""
@@ -47,7 +47,7 @@
                         />
                     </a>
                     <div class="txtWrapper">
-                    <a href="#mission" class="page-scroll">Notre mission</a>
+                    <a href="#top" class="page-scroll">Notre mission</a>
                     <a href="#équipe" class="page-scroll">Notre équipe</a>
                     <a href="#contact" class="page-scroll">Contact</a>
                     <div>
@@ -67,7 +67,7 @@
                 <h1>Service Numérique d'Accompagnement Pédagogique</h1>
                 </div>
                 <div class="under">
-                    <p>                        Les missions de notre service s’articulent autour de
+                    <p class="firstP">                        Les missions de notre service s’articulent autour de
                         deux composantes :
                     </p>
                     <div class="introInline">
@@ -120,9 +120,6 @@ style="border-style: none;width: 100%; height: 100%;"
 
 
         </section>
-
-        <!--
-
 
         <section id="équipe">
             <div class="team">
@@ -219,6 +216,8 @@ style="border-style: none;width: 100%; height: 100%;"
             </div>
         </section>
         <section id="contact"></section>
+        <!--
+        
         <footer></footer>
         <-->
     </body>
