Team section : DONE

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                         />
                     </a>
                     <div class="txtWrapper">
-                    <a href="#top" class="page-scroll">Notre mission</a>
-                    <a href="#équipe" class="page-scroll">Notre équipe</a>
+                    <a href="#top" class="page-scroll">Accueil</a>
+                    <a href="#mission" class="page-scroll">Notre mission</a>
+                    <a href="#equipe" class="page-scroll">Notre équipe</a>
                     <a href="#contact" class="page-scroll">Contact</a>
                     <div>
             </nav>
@@ -114,14 +115,14 @@
                     frameborder="0" border="0" cellspacing="0"
                 title="Site de l'Université de Nîmes"
 style="border-style: none;width: 100%; height: 100%;"
-
                 ></iframe>
             </div>
 
 
         </section>
 
-        <section id="équipe">
+        <section class="equipe">
+            <h1 id="equipe">Notre équipe</h1>
             <div class="team">
                 <div class="member">
                     <img
@@ -215,9 +216,8 @@ style="border-style: none;width: 100%; height: 100%;"
                 </div>
             </div>
         </section>
-        <section id="contact"></section>
         <!--
-        
+        <section id="contact"></section>       
         <footer></footer>
         <-->
     </body>
