working on bckanim

--- a/index.html
+++ b/index.html
@@ -117,8 +117,19 @@
 style="border-style: none;width: 100%; height: 100%;"
                 ></iframe>
             </div>
+        </section>
 
+        <!--Mission section<--->
+        <section class="missionWrapper">
+        <!--AJOUTER PROJETS<--->
 
+                <h1 id="mission">Notre mission</h1>
+                <div class="mission">
+                    <p>                        Les missions de notre service s’articulent autour de
+                        deux composantes :
+                    </p>                    
+                    
+                </div>
         </section>
 
         <section class="equipe">
@@ -129,7 +140,7 @@ style="border-style: none;width: 100%; height: 100%;"
                         src="./ressources/Marine.webp"
                         class="photo"
                         alt="Photo de Marine Moreau"
-                    />
+                    />                    
                     <h2>Marine Moreau</h2>
                     <h3>
                         Responsable d'équipe pédagogique &amp; Ingénieure
@@ -148,6 +159,7 @@ style="border-style: none;width: 100%; height: 100%;"
                         class="photo"
                         alt="Photo de Marina O"
                     />
+
                     <h2>Marina O</h2>
                     <h3>Assistante ingénieure pédagogique</h3>
                     <p>
@@ -220,5 +232,52 @@ style="border-style: none;width: 100%; height: 100%;"
         <section id="contact"></section>       
         <footer></footer>
         <-->
+            <div class='animation-example'>
+    <div class='item'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='item'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='item'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='item'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='item -type2'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='item -type2'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='item -type2'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='item -type2'>
+        <div class='line'></div>
+        <div class='dot'></div>
+        <div class='circle'></div>
+    </div>
+    <div class='center'>
+        <div class='circle'></div>
+        <div class='circle'></div>
+        <div class='circle'></div>
+    </div>
+</div>
     </body>
 </html>
