bck anim & maj photos : DONE

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <body class="homepage">
 
         <!--Header/Nav<--->
+            <div id="accueil"></div>
         <header>
             <nav>
                     <a class="logoA"
@@ -48,8 +49,8 @@
                     </a>
                     <div class="txtWrapper">
                     <a href="#top" class="page-scroll">Accueil</a>
-                    <a href="#mission" class="page-scroll">Notre mission</a>
-                    <a href="#equipe" class="page-scroll">Notre équipe</a>
+                    <a href="#mission" class="page-scroll">Mission</a>
+                    <a href="#equipe" class="page-scroll">Équipe</a>
                     <a href="#contact" class="page-scroll">Contact</a>
                     <div>
             </nav>
