--- a/index.html
+++ b/index.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
+
     <head>
         <!--<base href="/" /><-->
         <meta charset="utf-8" />
         <link rel="icon" href="./ressources/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>SNAP</title>
-        <meta
-            name="title"
-            content="Page du Service Numérique d'Accompagnement Pédagogique"
-        />
-        <meta
-            name="description"
-            content="Page du Service Numérique d'Accompagnement Pédagogique"
-        />
-        <meta
-            name="keywords"
-            content="SNAP, snap, Unimes, Université, Nîmes, service, Numérique, Accompagnement, Pédagogique"
-        />
+        <meta name="title" content="Page du Service Numérique d'Accompagnement Pédagogique" />
+        <meta name="description" content="Page du Service Numérique d'Accompagnement Pédagogique" />
+        <meta name="keywords" content="SNAP, snap, Unimes, Université, Nîmes, service, Numérique, Accompagnement, Pédagogique" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="language" content="French" />
         <meta name="revisit-after" content="30 days" />
         <meta name="author" content="Gillian Brousse" />
         <meta property="og:title" content="SNAP" />
-        <meta
-            property="og:description"
-            content="Page du Service Numérique d'Accompagnement Pédagogique"
-        />
+        <meta property="og:description" content="Page du Service Numérique d'Accompagnement Pédagogique" />
         <meta property="og:site_name" content="SNAP" />
         <meta property="og:type" content="website" />
         <!-- stylesheets-->
@@ -34,114 +23,71 @@
     </head>
 
     <body class="homepage">
-
         <!--Header/Nav<--->
-            <div id="accueil"></div>
+        <div id="accueil"></div>
         <header>
             <nav>
-                    <a class="logoA"
-                    href=""
-                        ><img
-                            fetchpriority="high"
-                            src="./ressources/LogoS.webp"
-                            class="logo"
-                        />
-                    </a>
-                    <div class="txtWrapper">
+                <a class="logoA" href=""><img fetchpriority="high" src="./ressources/LogoS.webp" class="logo" />
+                </a>
+                <div class="txtWrapper">
                     <a href="#top" class="page-scroll">Accueil</a>
-                    <a href="#mission" class="page-scroll">Mission</a>
-                    <a href="#equipe" class="page-scroll">Équipe</a>
+                    <a href="#notre-mission" class="page-scroll">Mission</a>
+                    <a href="#notre-equipe" class="page-scroll">Équipe</a>
                     <a href="#contact" class="page-scroll">Contact</a>
                     <div>
             </nav>
         </header>
-
         <!--Intro section<--->
         <section id="intro">
             <div class="intro">
                 <div class="over">
-                <img
-                    fetchpriority="high"
-                    src="./ressources/LogoL.webp"
-                    class="logo"
-                    alt="Logo du Service Numérique d'Accompagnement Pédagogique"
-                />
-                <h1>Service Numérique d'Accompagnement Pédagogique</h1>
+                    <img fetchpriority="high" src="./ressources/LogoL.webp" class="logo" alt="Logo du Service Numérique d'Accompagnement Pédagogique" />
+                    <h1>Service Numérique d'Accompagnement Pédagogique</h1>
                 </div>
                 <div class="under">
-                    <p class="firstP">                        Les missions de notre service s’articulent autour de
+                </div>
+            </div>
+            <div class="actu">
+                <h1>Actualités</h1>
+                <iframe src="https://www.unimes.fr/fr/index.html" frameborder="0" border="0" cellspacing="0" title="Site de l'Université de Nîmes" style="border-style: none;width: 100%; height: 100%;"></iframe>
+            </div>
+        </section>
+        <!--Mission section<--->
+        <section class="missionWrapper" id="notre-mission">
+            <!--AJOUTER PROJETS<--->
+            <h1 id="mission">Notre mission</h1>
+            <div class="mission">
+                    <p class="firstP"> Les missions de notre service s’articulent autour de
                         deux composantes :
                     </p>
                     <div class="introInline">
-                        <img
-                            src="./ressources/Ico1.webp"
-                            class="iconIntro"
-                            alt="Acompagnement numérique"
-                        />
+                        <img src="./ressources/Ico1.webp" class="iconIntro" alt="Acompagnement numérique" />
                         <p>
-                            <strong
-                                >L’accompagnement à la transformation
-                                numérique</strong
-                            >
+                            <strong>L’accompagnement à la transformation
+                                numérique</strong>
                         </p>
                     </div>
                     <div class="introInline">
-                        <img
-                            src="./ressources/Ico2.webp"
-                            class="iconIntro"
-                            alt="Conception de. ressources"
-                        />
+                        <img src="./ressources/Ico2.webp" class="iconIntro" alt="Conception de. ressources" />
                         <p><strong>La conception de ressources</strong></p>
                     </div>
                     <p class="lastP">
                         Nous proposons notre appui aux enseignants afin
                         <strong>d'identifier leurs besoins</strong>, de leur
-                        <strong
-                            >proposer des solutions numériques adaptées</strong
-                        >, de
-                        <strong
-                            >créer en collaboration des supports pédagogiques
-                            numériques</strong
-                        >
+                        <strong>proposer des solutions numériques adaptées</strong>, de
+                        <strong>créer en collaboration des supports pédagogiques
+                            numériques</strong>
                         et de
                         <strong>
-                            faciliter la prise en main des outils dédiés</strong
-                        >.
+                            faciliter la prise en main des outils dédiés</strong>.
                     </p>
-                </div>
-            </div>
-            <div class="actu">
-                <h1>Actualités</h1>
-                <iframe src="https://www.unimes.fr/fr/index.html"
-                    frameborder="0" border="0" cellspacing="0"
-                title="Site de l'Université de Nîmes"
-style="border-style: none;width: 100%; height: 100%;"
-                ></iframe>
             </div>
         </section>
-
-        <!--Mission section<--->
-        <section class="missionWrapper">
-        <!--AJOUTER PROJETS<--->
-
-                <h1 id="mission">Notre mission</h1>
-                <div class="mission">
-                    <p>                        Les missions de notre service s’articulent autour de
-                        deux composantes :
-                    </p>                    
-                    
-                </div>
-        </section>
-
-        <section class="equipe">
+        <section class="equipe" id="notre-equipe">
             <h1 id="equipe">Notre équipe</h1>
             <div class="team">
                 <div class="member">
-                    <img
-                        src="./ressources/Marine.webp"
-                        class="photo"
-                        alt="Photo de Marine Moreau"
-                    />                    
+                    <img src="./ressources/Marine.webp" class="photo" alt="Photo de Marine Moreau" />
                     <h2>Marine Moreau</h2>
                     <h3>
                         Responsable d'équipe pédagogique &amp; Ingénieure
@@ -155,12 +101,7 @@ style="border-style: none;width: 100%; height: 100%;"
                     </p>
                 </div>
                 <div class="member">
-                    <img
-                        src="./ressources/Marina.webp"
-                        class="photo"
-                        alt="Photo de Marina O"
-                    />
-
+                    <img src="./ressources/Marina.webp" class="photo" alt="Photo de Marina O" />
                     <h2>Marina O</h2>
                     <h3>Assistante ingénieure pédagogique</h3>
                     <p>
@@ -171,11 +112,7 @@ style="border-style: none;width: 100%; height: 100%;"
                     </p>
                 </div>
                 <div class="member">
-                    <img
-                        src="./ressources/Coralie.webp"
-                        class="photo"
-                        alt="Photo de Coralie Allanet"
-                    />
+                    <img src="./ressources/Coralie.webp" class="photo" alt="Photo de Coralie Allanet" />
                     <h2>Coralie Allanet</h2>
                     <h3>Assistante ingénieure pédagogique</h3>
                     <p>
@@ -185,11 +122,7 @@ style="border-style: none;width: 100%; height: 100%;"
                     </p>
                 </div>
                 <div class="member">
-                    <img
-                        src="./ressources/Tom.webp"
-                        class="photo"
-                        alt="Photo de Tom Servière"
-                    />
+                    <img src="./ressources/Tom.webp" class="photo" alt="Photo de Tom Servière" />
                     <h2>Tom Servière</h2>
                     <h3>Ingénieur scénariste</h3>
                     <p>
@@ -200,11 +133,7 @@ style="border-style: none;width: 100%; height: 100%;"
                     </p>
                 </div>
                 <div class="member">
-                    <img
-                        src="./ressources/Gillian.webp"
-                        class="photo"
-                        alt="Photo de Gillian Brousse"
-                    />
+                    <img src="./ressources/Gillian.webp" class="photo" alt="Photo de Gillian Brousse" />
                     <h2>Gillian Broussse</h2>
                     <h3>UX/UI designer</h3>
                     <p>
@@ -214,11 +143,7 @@ style="border-style: none;width: 100%; height: 100%;"
                     </p>
                 </div>
                 <div class="member lastMember">
-                    <img
-                        src="./ressources/Xavier.webp"
-                        class="photo"
-                        alt="Photo de Xavier Moulin"
-                    />
+                    <img src="./ressources/Xavier.webp" class="photo" alt="Photo de Xavier Moulin" />
                     <h2>Xavier Moulin</h2>
                     <h3>Chef de projet</h3>
                     <p>
@@ -233,52 +158,53 @@ style="border-style: none;width: 100%; height: 100%;"
         <section id="contact"></section>       
         <footer></footer>
         <-->
-            <div class='animation-example'>
-    <div class='item'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='item'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='item'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='item'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='item -type2'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='item -type2'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='item -type2'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='item -type2'>
-        <div class='line'></div>
-        <div class='dot'></div>
-        <div class='circle'></div>
-    </div>
-    <div class='center'>
-        <div class='circle'></div>
-        <div class='circle'></div>
-        <div class='circle'></div>
-    </div>
-</div>
+        <div class='animation-example'>
+            <div class='item'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='item'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='item'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='item'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='item -type2'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='item -type2'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='item -type2'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='item -type2'>
+                <div class='line'></div>
+                <div class='dot'></div>
+                <div class='circle'></div>
+            </div>
+            <div class='center'>
+                <div class='circle'></div>
+                <div class='circle'></div>
+                <div class='circle'></div>
+            </div>
+        </div>
     </body>
+
 </html>
