starting mission zone and mission text

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!--Mission section<--->
         <section class="missionWrapper" id="notre-mission">
             <!--AJOUTER PROJETS<--->
-            <h1 id="mission">Notre mission</h1>
+            <h1 id="mission">Nos missions</h1>
             <div class="mission">
                     <p class="firstP"> Les missions de notre service s’articulent autour de
                         deux composantes :
@@ -76,7 +76,7 @@
                         <strong>d'identifier leurs besoins</strong>, de leur
                         <strong>proposer des solutions numériques adaptées</strong>, de
                         <strong>créer en collaboration des supports pédagogiques
-                            numériques</strong>
+                            interactifs</strong>
                         et de
                         <strong>
                             faciliter la prise en main des outils dédiés</strong>.
