starting mission zone and mission text

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                     <h1>Service Numérique d'Accompagnement Pédagogique</h1>
                 </div>
                 <div class="under">
+                    <p>
+                        Nous proposons notre appui aux enseignants afin
+                        <strong>d'identifier leurs besoins</strong>, de leur
+                        <strong>proposer des solutions numériques adaptées</strong>, de
+                        <strong>créer en collaboration des supports pédagogiques
+                            interactifs</strong>
+                        et de
+                        <strong>
+                            faciliter la prise en main des outils dédiés</strong>.
+                    </p>
                 </div>
             </div>
             <div class="actu">
@@ -57,30 +67,64 @@
             <!--AJOUTER PROJETS<--->
             <h1 id="mission">Nos missions</h1>
             <div class="mission">
-                    <p class="firstP"> Les missions de notre service s’articulent autour de
-                        deux composantes :
+                <p class="firstP"> Les missions de notre service s’articulent autour de
+                    deux composantes :
+                </p>
+                <div class="introInline">
+                    <img src="./ressources/Ico1.webp" class="iconIntro" alt="Acompagnement numérique" />
+                    <p>
+                        <strong>L’accompagnement à la transformation
+                            numérique</strong>
                     </p>
-                    <div class="introInline">
-                        <img src="./ressources/Ico1.webp" class="iconIntro" alt="Acompagnement numérique" />
-                        <p>
-                            <strong>L’accompagnement à la transformation
-                                numérique</strong>
-                        </p>
-                    </div>
-                    <div class="introInline">
-                        <img src="./ressources/Ico2.webp" class="iconIntro" alt="Conception de. ressources" />
-                        <p><strong>La conception de ressources</strong></p>
-                    </div>
-                    <p class="lastP">
-                        Nous proposons notre appui aux enseignants afin
-                        <strong>d'identifier leurs besoins</strong>, de leur
-                        <strong>proposer des solutions numériques adaptées</strong>, de
-                        <strong>créer en collaboration des supports pédagogiques
-                            interactifs</strong>
-                        et de
-                        <strong>
-                            faciliter la prise en main des outils dédiés</strong>.
+                </div>
+                <div class="introInline">
+                    <img src="./ressources/Ico2.webp" class="iconIntro" alt="Conception de. ressources" />
+                    <p><strong>La conception de ressources</strong></p>
+                </div>
+                <p class="lastP">
+                    Nous proposons notre appui aux enseignants afin
+                    <strong>d'identifier leurs besoins</strong>, de leur
+                    <strong>proposer des solutions numériques adaptées</strong>, de
+                    <strong>créer en collaboration des supports pédagogiques
+                        interactifs</strong>
+                    et de
+                    <strong>
+                        faciliter la prise en main des outils dédiés</strong>.
+                </p>
+                <p class="lastP">
+                    Pour autant, une fois que notre accompagnement a porté ses fruits, nous restons à leur disposition afin de
+                    <strong>réfléchir ensemble à des pistes d’amélioration</strong>, de
+                    <strong>répondre à de nouvelles problématiques</strong>, de
+                    <strong>créer en collaboration des supports pédagogiques
+                        interactifs</strong>
+                    et, surtout, d’
+                    <strong>
+                        assurer le suivi de notre travail commun</strong>.
+                </p>
+            </div>
+            <div class="missionWrapper2">
+                <div class="left">
+                    <p>
+                        Nos principaux outils :
+                        - Fiches conseils.
+                        - Plateforme de cours en ligne moodle (https://cours.unimes.fr/).
+                        - Genially.
+                        - H5P.
+                        - Infographies.
+                        - Vidéos.
                     </p>
+                </div>
+                <div class="right">
+                                  <p>
+                        Nos principaux outils :
+                        - Fiches conseils.
+                        - Plateforme de cours en ligne moodle (https://cours.unimes.fr/).
+                        - Genially.
+                        - H5P.
+                        - Infographies.
+                        - Vidéos.
+                    </p>
+                </div>
             </div>
         </section>
         <section class="equipe" id="notre-equipe">
