commit before changes (html -- react)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </head>
 
     <body class="homepage">
+       
+            <main>
+
         <!--Header/Nav<--->
         <div id="accueil"></div>
         <header>
@@ -105,15 +108,19 @@
             <!--
             <div class="missionWrapper2">
                 <div class="left">
-                    <p>
-                        Nos principaux outils :
-                        - Fiches conseils.
-                        - Plateforme de cours en ligne moodle (https://cours.unimes.fr/).
-                        - Genially.
-                        - H5P.
-                        - Infographies.
-                        - Vidéos.
+                    <p><strong>
+                        Nos principaux outils :</strong>
                     </p>
+                    <ul>
+                        <li>
+                        Fiches conseils.</li>
+                        <li>Plateforme de cours en ligne Moodle.</li>
+                        <li>Genially.</li>
+                        <li>H5P.</li>
+                        <li>Infographies.</li>
+                        <li>Vidéos.</li>
+
+                    </ul>
                 </div>
                 <div class="right">
                                   <p>
@@ -204,7 +211,8 @@
         <section id="contact"></section>       
         <footer></footer>
         <-->
-        <div class='animation-example'>
+            </main>
+  <div class='animation-example'>
             <div class='item'>
                 <div class='line'></div>
                 <div class='dot'></div>
@@ -251,6 +259,7 @@
                 <div class='circle'></div>
             </div>
         </div>
+       
     </body>
 
 </html>
