--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="" name="description" />
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon" />
+        <link href="./favicon.ico" rel="icon" />
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -52,51 +52,6 @@
         </div>
         <!-- Spinner End -->
 
-        <!-- Topbar Start -->
-        <div class="container-fluid bg-dark text-light p-0">
-            <div class="row gx-0 d-none d-lg-flex">
-                <div class="col-lg-7 px-5 text-start">
-                    <div class="h-100 d-inline-flex align-items-center me-4">
-                        <small
-                            class="fa fa-map-marker-alt text-primary me-2"
-                        ></small>
-                        <small>123 Street, New York, USA</small>
-                    </div>
-                    <div class="h-100 d-inline-flex align-items-center">
-                        <small class="far fa-clock text-primary me-2"></small>
-                        <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
-                    </div>
-                </div>
-                <div class="col-lg-5 px-5 text-end">
-                    <div class="h-100 d-inline-flex align-items-center me-4">
-                        <small
-                            class="fa fa-phone-alt text-primary me-2"
-                        ></small>
-                        <small>+012 345 6789</small>
-                    </div>
-                    <div class="h-100 d-inline-flex align-items-center mx-n2">
-                        <a
-                            class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary"
-                            href=""
-                            ><i class="fab fa-facebook-f"></i
-                        ></a>
-                        <a
-                            class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary"
-                            href=""
-                            ><i class="fab fa-twitter"></i
-                        ></a>
-                        <a
-                            class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary"
-                            href=""
-                            ><i class="fab fa-linkedin-in"></i
-                        ></a>
-                        <a class="btn btn-square btn-link rounded-0" href=""
-                            ><i class="fab fa-instagram"></i
-                        ></a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- Topbar End -->
 
         <!-- Navbar Start -->
@@ -107,10 +62,12 @@
                 href="index.html"
                 class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5"
             >
-                <h2 class="m-0">
-                    <i class="fa fa-car text-primary me-2"></i>Drivin
-                </h2>
+                <img fetchpriority="high" src="./LogoS.webp" class="logo" />
+                <h2 class="m-0">SNAP</h2>
             </a>
+            <h1 class="title">
+                Service Numérique & Accompagnement Pédagogique
+            </h1>
             <button
                 type="button"
                 class="navbar-toggler me-4"
@@ -122,17 +79,21 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="index.html" class="nav-item nav-link active"
-                        >Home</a
+                        >Accueil</a
                     >
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="courses.html" class="nav-item nav-link">Courses</a>
+                    <a href="courses.html" class="nav-item nav-link"
+                        >Notre mission</a
+                    >
+                    <a href="about.html" class="nav-item nav-link"
+                        >Notre équipe</a
+                    >
                     <div class="nav-item dropdown">
                         <a
                             href="#"
                             class="nav-link dropdown-toggle"
                             data-bs-toggle="dropdown"
-                            >Pages</a
-                        >
+                            ><i class="fa fa-plus-square ms-3"></i
+                        ></a>
                         <div class="dropdown-menu bg-light m-0">
                             <a href="feature.html" class="dropdown-item"
                                 >Features</a
@@ -151,13 +112,12 @@
                             >
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a
+                        href="contact.html"
+                        class="btn btn-primary py-4 px-lg-5 d-none d-lg-block mainC"
+                        >Nous contacter<i class="fa fa-arrow-right ms-3"></i
+                    ></a>
                 </div>
-                <a
-                    href=""
-                    class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"
-                    >Get Started<i class="fa fa-arrow-right ms-3"></i
-                ></a>
             </div>
         </nav>
         <!-- Navbar End -->
@@ -178,13 +138,17 @@
                         />
                         <div class="carousel-caption">
                             <div class="container">
-                                <div class="row justify-content-center">
+                                <div
+                                    class="introText1 row justify-content-center"
+                                >
                                     <div class="col-lg-7">
                                         <h1
                                             class="display-2 text-light mb-5 animated slideInDown"
                                         >
-                                            Learn To Drive With Confidence
+                                            Accompagnement à la transformation
+                                            numérique
                                         </h1>
+                                        <!--
                                         <a
                                             href=""
                                             class="btn btn-primary py-sm-3 px-sm-5"
@@ -195,6 +159,7 @@
                                             class="btn btn-light py-sm-3 px-sm-5 ms-3"
                                             >Our Courses</a
                                         >
+                                        <-->
                                     </div>
                                 </div>
                             </div>
@@ -208,13 +173,18 @@
                         />
                         <div class="carousel-caption">
                             <div class="container">
-                                <div class="row justify-content-center">
+                                <div
+                                    class="introText2 row justify-content-center"
+                                >
                                     <div class="col-lg-7">
                                         <h1
                                             class="display-2 text-light mb-5 animated slideInDown"
                                         >
-                                            Safe Driving Is Our Top Priority
+                                            Conception de ressources
+                                            pédagogiques
                                         </h1>
+                                        <!--
+
                                         <a
                                             href=""
                                             class="btn btn-primary py-sm-3 px-sm-5"
@@ -225,6 +195,7 @@
                                             class="btn btn-light py-sm-3 px-sm-5 ms-3"
                                             >Our Courses</a
                                         >
+                                        <-->
                                     </div>
                                 </div>
                             </div>
@@ -258,7 +229,9 @@
             </div>
         </div>
         <!-- Carousel End -->
+
         <!-- Facts Start -->
+        <!--
         <div class="container-fluid facts py-5 pt-lg-0">
             <div class="container py-5 pt-lg-0">
                 <div class="row gx-0">
@@ -328,8 +301,10 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- Facts End -->
         <!-- About Start -->
+        <!--
         <div class="container-xxl py-6">
             <div class="container">
                 <div class="row g-5">
@@ -418,9 +393,11 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- About End -->
 
         <!-- Courses Start -->
+        <!--
         <div class="container-xxl courses my-6 py-6 pb-0">
             <div class="container">
                 <div
@@ -671,8 +648,10 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- Courses End -->
         <!-- Features Start -->
+        <!--
         <div class="container-xxl py-6">
             <div class="container">
                 <div class="row g-5">
@@ -782,9 +761,11 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- Features End -->
 
         <!-- Team Start -->
+        <!--
         <div class="container-xxl py-6">
             <div class="container">
                 <div
@@ -943,9 +924,11 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- Team End -->
 
         <!-- Testimonial Start -->
+        <!--
         <div class="container-xxl py-6">
             <div class="container">
                 <div
@@ -1044,9 +1027,11 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- Testimonial End -->
 
         <!-- Footer Start -->
+        <!--
         <div
             class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn"
             data-wow-delay="0.1s"
@@ -1124,9 +1109,11 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- Footer End -->
 
         <!-- Copyright Start -->
+        <!--
         <div
             class="container-fluid copyright text-light py-4 wow fadeIn"
             data-wow-delay="0.1s"
@@ -1140,7 +1127,9 @@
                         Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        <-->
+        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+        <!--
                         Designed By
                         <a href="https://htmlcodex.com">HTML Codex</a>
                         <br />Distributed By:
@@ -1151,11 +1140,14 @@
                 </div>
             </div>
         </div>
+        <-->
         <!-- Copyright End -->
         <!-- Back to Top -->
+        <!---
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
             ><i class="bi bi-arrow-up"></i
         ></a>
+        <-->
 
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
