header and carousel : done 1/2

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5"
             >
                 <img fetchpriority="high" src="./LogoS.webp" class="logo" />
-                <h2 class="m-0">SNAP</h2>
+                <h2 class="sub m-0">SNAP</h2>
             </a>
             <h1 class="title">
                 Service Numérique & Accompagnement Pédagogique
@@ -81,12 +81,8 @@
                     <a href="index.html" class="nav-item nav-link active"
                         >Accueil</a
                     >
-                    <a href="courses.html" class="nav-item nav-link"
-                        >Notre mission</a
-                    >
-                    <a href="about.html" class="nav-item nav-link"
-                        >Notre équipe</a
-                    >
+                    <a href="courses.html" class="nav-item nav-link">mission</a>
+                    <a href="about.html" class="nav-item nav-link">Projets</a>
                     <div class="nav-item dropdown">
                         <a
                             href="#"
@@ -96,20 +92,15 @@
                         ></a>
                         <div class="dropdown-menu bg-light m-0">
                             <a href="feature.html" class="dropdown-item"
-                                >Features</a
-                            >
-                            <a href="appointment.html" class="dropdown-item"
-                                >Appointment</a
+                                >Documentation</a
                             >
                             <a href="team.html" class="dropdown-item"
-                                >Our Team</a
+                                >Notre équipe</a
                             >
                             <a href="testimonial.html" class="dropdown-item"
-                                >Testimonial</a
+                                >Retours d'enseignants</a
                             >
-                            <a href="404.html" class="dropdown-item"
-                                >404 Page</a
-                            >
+                            <a href="404.html" class="dropdown-item">Blog</a>
                         </div>
                     </div>
                     <a
@@ -183,19 +174,6 @@
                                             Conception de ressources
                                             pédagogiques
                                         </h1>
-                                        <!--
-
-                                        <a
-                                            href=""
-                                            class="btn btn-primary py-sm-3 px-sm-5"
-                                            >Learn More</a
-                                        >
-                                        <a
-                                            href=""
-                                            class="btn btn-light py-sm-3 px-sm-5 ms-3"
-                                            >Our Courses</a
-                                        >
-                                        <-->
                                     </div>
                                 </div>
                             </div>
