--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="" name="keywords" />
         <meta content="" name="description" />
-
         <!-- Favicon -->
         <link href="./favicon.ico" rel="icon" />
-
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +15,6 @@
             href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap"
             rel="stylesheet"
         />
-
         <!-- Icon Font Stylesheet -->
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -27,17 +24,14 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
             rel="stylesheet"
         />
-
         <!-- Libraries Stylesheet -->
         <link href="lib/animate/animate.min.css" rel="stylesheet" />
         <link
             href="lib/owlcarousel/assets/owl.carousel.min.css"
             rel="stylesheet"
         />
-
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
-
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
     </head>
@@ -51,9 +45,7 @@
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
         <!-- Spinner End -->
-
         <!-- Topbar End -->
-
         <!-- Navbar Start -->
         <nav
             class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0"
@@ -112,7 +104,6 @@
             </div>
         </nav>
         <!-- Navbar End -->
-
         <!-- Carousel Start -->
         <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
             <div
@@ -139,18 +130,6 @@
                                             Accompagnement à la transformation
                                             numérique
                                         </h1>
-                                        <!--
-                                        <a
-                                            href=""
-                                            class="btn btn-primary py-sm-3 px-sm-5"
-                                            >Learn More</a
-                                        >
-                                        <a
-                                            href=""
-                                            class="btn btn-light py-sm-3 px-sm-5 ms-3"
-                                            >Our Courses</a
-                                        >
-                                        <-->
                                     </div>
                                 </div>
                             </div>
@@ -207,9 +186,7 @@
             </div>
         </div>
         <!-- Carousel End -->
-
         <!-- Facts Start -->
-        <!--
         <div class="container-fluid facts py-5 pt-lg-0">
             <div class="container py-5 pt-lg-0">
                 <div class="row gx-0">
@@ -220,16 +197,19 @@
                         >
                             <div class="d-flex">
                                 <div
-                                    class="flex-shrink-0 btn-lg-square bg-primary"
+                                    class="flex-shrink-0 btn-lg-square introIcon bg-primary"
                                 >
-                                    <i class="fa fa-car text-white"></i>
+                                    <i class="fa fa-search text-white"></i>
                                 </div>
-                                <div class="ps-4">
-                                    <h5>Easy Driving Learn</h5>
+                                <div class="iconTxt ps-4">
+                                    <h5>Identifier vos besoins</h5>
+                                    <!--
+
                                     <span
                                         >Clita erat ipsum lorem sit sed stet duo
                                         justo erat amet</span
                                     >
+                                    <-->
                                 </div>
                             </div>
                         </div>
@@ -241,16 +221,22 @@
                         >
                             <div class="d-flex">
                                 <div
-                                    class="flex-shrink-0 btn-lg-square bg-primary"
+                                    class="flex-shrink-0 btn-lg-square introIcon bg-primary"
                                 >
-                                    <i class="fa fa-users text-white"></i>
+                                    <i class="fa fa-laptop text-white"></i>
                                 </div>
-                                <div class="ps-4">
-                                    <h5>National Instructor</h5>
+                                <div class="iconTxt ps-4">
+                                    <h5>
+                                        Vous proposer des solutions numériques
+                                        adaptées
+                                    </h5>
+                                    <!--
+
                                     <span
                                         >Clita erat ipsum lorem sit sed stet duo
                                         justo erat amet</span
                                     >
+                                    <-->
                                 </div>
                             </div>
                         </div>
@@ -262,16 +248,23 @@
                         >
                             <div class="d-flex">
                                 <div
-                                    class="flex-shrink-0 btn-lg-square bg-primary"
+                                    class="flex-shrink-0 btn-lg-square introIcon bg-primary"
                                 >
-                                    <i class="fa fa-file-alt text-white"></i>
+                                    <i
+                                        class="fa fa-check-square text-white"
+                                    ></i>
                                 </div>
-                                <div class="ps-4">
-                                    <h5>Get licence</h5>
+                                <div class="iconTxt ps-4">
+                                    <h5>
+                                        Faciliter votre prise en main des outils
+                                        dédiés
+                                    </h5>
+                                    <!--
                                     <span
                                         >Clita erat ipsum lorem sit sed stet duo
                                         justo erat amet</span
                                     >
+                                    <-->
                                 </div>
                             </div>
                         </div>
@@ -279,7 +272,6 @@
                 </div>
             </div>
         </div>
-        <-->
         <!-- Facts End -->
         <!-- About Start -->
         <!--
@@ -373,7 +365,6 @@
         </div>
         <-->
         <!-- About End -->
-
         <!-- Courses Start -->
         <!--
         <div class="container-xxl courses my-6 py-6 pb-0">
@@ -741,7 +732,6 @@
         </div>
         <-->
         <!-- Features End -->
-
         <!-- Team Start -->
         <!--
         <div class="container-xxl py-6">
@@ -904,7 +894,6 @@
         </div>
         <-->
         <!-- Team End -->
-
         <!-- Testimonial Start -->
         <!--
         <div class="container-xxl py-6">
@@ -1007,7 +996,6 @@
         </div>
         <-->
         <!-- Testimonial End -->
-
         <!-- Footer Start -->
         <!--
         <div
@@ -1089,7 +1077,6 @@
         </div>
         <-->
         <!-- Footer End -->
-
         <!-- Copyright Start -->
         <!--
         <div
@@ -1126,7 +1113,6 @@
             ><i class="bi bi-arrow-up"></i
         ></a>
         <-->
-
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
