tools : DONE, starting next section

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
         <!-- Facts End -->
         <!-- About Start -->
-        <div class="container-xxl py-6">
+        <div class="container-xxl py-6 aboutM">
             <div class="container">
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -186,13 +186,12 @@
                                 <img src="./img/Ico2.webp" class="iconIntro" alt="Acompagnement numérique" />
                             </div>
                             <p class="mb-4">
-                                Pour autant, une fois que notre accompagnement a porté ses fruits, nous restons à votre disposition afin de
+                                Pour autant, une fois que notre accompagnement a porté ses fruits, nous restons à votre service afin de
                                 réfléchir ensemble à des pistes d’amélioration, de
                                 répondre à de nouvelles problématiques, de
                                 créer en collaboration des supports pédagogiques
                                 interactifs
-                                et, surtout, d’
-                                assurer le suivi de notre travail commun</strong>.
+                                et, surtout, d’assurer le suivi de notre travail commun</strong>.
                             </p>
                         </div>
                     </div>
@@ -201,7 +200,7 @@
         </div>
         <!-- About End -->
         <!-- Courses Start -->
-        <div id="outils" class="container-xxl courses my-6 py-6 pb-0">
+        <div id="outils" class=" outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow wow2 fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
                     <h6 class="text-primary text-uppercase mb-2">
@@ -211,7 +210,7 @@
                         Créons ensemble du contenu pédagogique multimédia
                     </h1>
                 </div>
-                <div class=" row g-4 justify-content-center">
+                <div class=" row g-4 justify-content-center cardRow">
                     <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
                             <div class="card text-center p-4 pt-0">
@@ -244,7 +243,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
                             <div class="card text-center p-4 pt-0">
@@ -261,12 +259,12 @@
                             </div>
                         </div>
                     </div>
-                              <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
                             <div class="card text-center p-4 pt-0">
                                 <h5 class="mb-3">h5p</h5>
                                 <p>
-                              Pour ludifier les apprentissages
+                                    Pour ludifier les apprentissages
                                 </p>
                             </div>
                             <div class="position-relative mt-auto">
@@ -278,9 +276,61 @@
                         </div>
                     </div>
 
+                    <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
+                            <div class="card text-center p-4 pt-0">
+                                <h5 class="mb-3">Infographies personnalisées</h5>
+                                <p>
+                                    Pour illustrer vos contenus
+                                </p>
+                            </div>
+                            <div class="position-relative mt-auto">
+                                <img class="img-fluid" src="img/courses-5.jpg" alt="" />
+                                <div class="courses-overlay">
+                                    <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                            <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
+                            <div class="card text-center p-4 pt-0">
+                                <h5 class="mb-3">Rendez-vous d'accompagnement</h5>
+                                <p>
+                                    Se concerter pour numériser vos enseignements
+                                </p>
+                            </div>
+                            <div class="position-relative mt-auto">
+                                <img class="img-fluid" src="img/courses-6.jpg" alt="" />
+                                <div class="courses-overlay">
+                                    <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                                       <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
+                            <div class="card text-center p-4 pt-0">
+                                <h5 class="mb-3">Créations vidéo</h5>
+                                <p>
+                                    Diversifier les supports d'apprentissage
+                                </p>
+                            </div>
+                            <div class="position-relative mt-auto">
+                                <img class="img-fluid" src="img/courses-7.jpg" alt="" />
+                                <div class="courses-overlay">
+                                    <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
-            <!-- Courses End -->            
+            <!-- Courses End -->
             <!-- Team Start -->
             <!--
         <div class="container-xxl py-6">
