--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
         <!-- Spinner End -->
-        <!-- Topbar End -->
+
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
@@ -52,17 +52,19 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-plus-square ms-3"></i></a>
                         <div class="dropdown-menu bg-light m-0">
-                            <a href="feature.html" class="dropdown-item">Documentation</a>
+                            <a href="documentation.html" class="dropdown-item">Documentation</a> <!-- Create doc html page <-->
                             <a href="#équipe" class="dropdown-item">Notre équipe</a>
                             <a href="#témoignages" class="dropdown-item">Témoignages d'enseignants</a>
-                            <a href="404.html" class="dropdown-item">Blog</a>
+                            <a href="" class="dropdown-item">Blog</a> <!--create blog on cms ?<-->
                         </div>
                     </div>
                     <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block mainC">Nous contacter<i class="fa fa-arrow-right ms-3"></i></a>
+                    <!-- Style contact page <-->
                 </div>
             </div>
         </nav>
         <!-- Navbar End -->
+
         <!-- Carousel Start -->
         <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
             <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -170,12 +172,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="h-100">
-                            <!--
-                            <h6 class="text-primary text-uppercase mb-2">
-                                Notre mission
-                            </h6>
-                            <-->
+                        <div class="h-100">                            
                             <h1 class="display-6 mb-4">
                                 Nous accompagnons les enseignants dans leur transformation
                                 numérique
@@ -204,12 +201,8 @@
         <!-- Courses Start -->
         <div id="outils" class=" outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
-                <div class="text-center mx-auto mb-5 wow wow2 fadeInUp" data-wow-delay="0.1s" style="max-width: 500px" * />
-                <!--
-                    <h6 class="text-primary text-uppercase mb-2">
-                        Nos outils
-                    </h6>
-                    <-->
+                <div class="text-center mx-auto mb-5 wow wow2 fadeInUp" data-wow-delay="0.1s" style="max-width: 500px" * />           
+                <!-- This is doc ? or doc.html creation ?<-->     
                 <h1 class="display-6 mb-4">
                     Créons ensemble du contenu pédagogique multimédia
                 </h1>
@@ -226,7 +219,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-6.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a><!--link to contact page <-->
                             </div>
                         </div>
                     </div>
@@ -242,7 +235,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-1.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a> <!--link to doc page + # <-->
                             </div>
                         </div>
                     </div>
@@ -258,7 +251,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-4.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a> <!--link to doc page + # <-->
                             </div>
                         </div>
                     </div>
@@ -274,7 +267,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-3.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a> <!--link to doc page<-->
                             </div>
                         </div>
                     </div>
@@ -290,7 +283,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-2.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a> <!--link to doc page + # <-->
                             </div>
                         </div>
                     </div>
@@ -306,7 +299,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-5.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a> <!--link to doc page + # ?<-->
                             </div>
                         </div>
                     </div>
@@ -322,7 +315,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-7.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a> <!--link to doc page + # ?<-->
                             </div>
                         </div>
                     </div>
@@ -333,12 +326,7 @@
         <!-- Testimonial Start -->
         <div id="témoignages" class="container-xxl py-6">
             <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
-                    <!--
-                    <h6 class="text-primary text-uppercase mb-2">
-                        Testimonial
-                    </h6>
-                    <-->
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">                    
                     <h1 class="display-6 mb-4">Témoignages d'enseignants</h1>
                 </div>
                 <div class="row justify-content-center">
@@ -406,6 +394,8 @@
                         Notre équipe
                     </h6>
                 </div>
+ <!--link all to linkedin ?<-->
+
                 <div class="row g-0 team-items">
                     <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
@@ -536,6 +526,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
+<!--Better if linked to mentions page ??<-->
+
                         <p class="mb-2">Directeur de publication : Xavier Moulin -
                             <a href="mailto:Xavier.moulin@unimes.fr">Xavier.moulin@unimes.fr</a></p>
                         <p class="mb-2">Administrateur Web : Gillian Brousse - <a href="mailto:gillian.brousse@unimes.fr">gillian.brousse@unimes.fr</p>
@@ -566,6 +558,9 @@
         </div>
         <!-- Footer End -->
         <!-- Back to Top -->
+
+ <!--check back to top and header fix<-->
+
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
